--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .
           site_packages=$(python -m site --user-site)
+          echo "### site_packages: ${site_packages}"
           bfproto_dir=$(realpath ./proto)
+          echo "### bfproto_dir: ${bfproto_dir}"
           python -m grpc_tools.protoc \
             --proto_path=${bfproto_dir} \
             --proto_path=${site_packages} \
