--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,15 +14,14 @@ jobs:
         uses: "actions/setup-python@v2"
         with:
           python-version: 3.6
-      - name: "Install BfRt and Dependencies"
+      - name: "Setup Virtual Environment"
         run: |
-          python -m pip install --upgrade pip
+          python -m venv .venv
+          . ./.venv/bin/activate
+          pip install --upgrade pip
           pip install -e .
           site_packages=$(python -m site --user-site)
-          echo "### site_packages: ${site_packages}"
-          mkdir -p ${site_packages}
           bfproto_dir=$(realpath ./proto)
-          echo "### bfproto_dir: ${bfproto_dir}"
           python -m grpc_tools.protoc \
             --proto_path=${bfproto_dir} \
             --proto_path=${site_packages} \
@@ -31,6 +30,7 @@ jobs:
                 ${bfproto_dir}/bfruntime.proto
       - name: "Run Tests"
         run:
+          . ./.venv/bin/activate
           python -m pytest
           
       
