--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           repository: "googleapis/api-common-protos"
       - name: "Setup Virtual Environment"
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install pytest
           pip install -e .
           mkdir -p gen-py
