--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,7 @@ jobs:
           path: "api-common-protos"
       - name: "Setup Virtual Environment"
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          ls -lrth $GITHUB_WORKSPACE
+          python -m pip install --upgrade pip pytest pytest-cov
           pip install -e .
           mkdir -p gen-py
           python -m grpc_tools.protoc \
@@ -36,6 +34,6 @@ jobs:
         env:
           PYTHONPATH: ${{ github.workspace }}/gen-py
         run:
-          python -m pytest -v
+          python -m pytest -v --cov=bfrt_helper --cov-report html
           
       
