Test using github vars in script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
           pip install -e .
           mkdir -p gen-py
           python -m grpc_tools.protoc \
-            --proto_path=$GITHUB_WORKSPACE/proto \
-            --proto_path=$GITHUB_WORKSPACE/api-common-protos \
-            --python_out=$GITHUB_WORKSPACE/gen-py \
+            --proto_path=${{ github.workspace }}/proto \
+            --proto_path=${{ github.workspace }}/api-common-protos \
+            --python_out=${{ github.workspace }}/gen-py \
             --grpc_python_out=./gen-py \
-                $GITHUB_WORKSPACE/proto/bfruntime.proto
+                ${{ github.workspace }}/proto/bfruntime.proto
       - name: "Run Tests"
         env:
           PYTHONPATH: ${{ github.workspace }}/gen-py
