--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
           path: "api-common-protos"
       - name: "Setup Virtual Environment"
         run: |
-          python -m pip install --upgrade pip pytest pytest-cov
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -e .
           mkdir -p gen-py
           python -m grpc_tools.protoc \
@@ -35,5 +36,8 @@ jobs:
           PYTHONPATH: ${{ github.workspace }}/gen-py
         run:
           python -m pytest -v --cov=bfrt_helper --cov-report html
-          
+      - name: "Run Linting"
+        run: |
+          pip install flake8
+          flake8 ./bfrt_helper
       
