--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
 
   lint:
     runs-on: "ubuntu-latest"
+    steps:
       - name: "Checkout Code"
         uses: "actions/checkout@v2"
       - name: "Install Python 3"
