attempt at caching

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           clean: false
       - name: "Generate BfRuntime Protobuf"
         if: steps.cache-bfrt-protobuf.outputs.cache-hit != 'true'
+        run: |
           mkdir -p gen-py
           python -m grpc_tools.protoc \
             --proto_path=${{ github.workspace }}/proto \
