Added extensive requirements file for cached venv

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
+attrs
+coverage
+googleapis-common-protos
+grpcio
+grpcio-tools
+importlib-metadata
+importlib-resources
+iniconfig
+packaging
+pluggy
+protobuf
+py
+pyparsing
 pytest
 pytest-cov
 pytest-github-actions-annotate-failures
+six
+toml
+tomli
+typing-extensions
+wheel
+zipp
