--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,19 @@ jobs:
         with:
            path: "gen-py"
            key: ${{ runner.os }}-bfrt-protobuf
+
+      - uses: "syphar/restore-virtualenv@v1"
+        id: "cache-virtualenv"
       - name: "Setup Virtual Environment"
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -e .
+      
+      - name: "Install Bfrt Helper"
+        run: "pip install -e ."
       - name: "Clone Google Common Protos"
-        if: steps.cache-protobuf.outputs.cache-hit != 'true'
+        if: steps.cache-bfrt-protobuf.outputs.cache-hit != 'true'
         uses: "actions/checkout@v2"
         with:
           repository: "googleapis/api-common-protos"
