--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
 attrs
+black
+click
 coverage
+flake8
 googleapis-common-protos
 grpcio
 grpcio-tools
 importlib-metadata
 importlib-resources
 iniconfig
+mccabe
+mypy-extensions
 packaging
+pathspec
+platformdirs
 pluggy
 protobuf
 py
+pycodestyle
+pyflakes
 pyparsing
 pytest
 pytest-cov
 pytest-github-actions-annotate-failures
+regex
 six
 toml
 tomli
