--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   create-environment:
+    runs-on: "ubuntu-latest"
     steps:
       - uses: "syphar/restore-virtualenv@v1"
         id: "cache-virtualenv"
