--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ jobs:
   create-environment:
     runs-on: "ubuntu-latest"
     steps:
+      - name: "Checkout Code"
+        uses: "actions/checkout@v2"
       - uses: "syphar/restore-virtualenv@v1"
         id: "cache-virtualenv"
 
