--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,20 @@ jobs:
         uses: "actions/checkout@v2"
       - uses: "syphar/restore-virtualenv@v1"
         id: "cache-virtualenv"
+
       - name: "Cache BfRuntime Protobuf"
         id: "cache-bfrt-protobuf"
         uses: "actions/cache@v2"
         with:
             path: "gen-py"
             key: ${{ runner.os }}-bfrt-protobuf
+
       - name: "Setup Virtual Environment"
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: "Clone Google Common Protos"
         if: steps.cache-bfrt-protobuf.outputs.cache-hit != 'true'
         uses: "actions/checkout@v2"
@@ -30,6 +33,7 @@ jobs:
           repository: "googleapis/api-common-protos"
           path: "api-common-protos"
           clean: false
+
       - name: "Generate BfRuntime Protobuf"
         if: steps.cache-bfrt-protobuf.outputs.cache-hit != 'true'
         run: |
@@ -53,7 +57,7 @@ jobs:
         id: "cache-virtualenv"
       - name: "Install Bfrt Helper"
         run: |
-          ls -lrth
+          ls -lrtha
           pip install -e .
       - name: "Run Tests"
         env:
@@ -75,7 +79,7 @@ jobs:
         id: "cache-virtualenv"
       - name: "ls -lrth"
         run: |
-          ls -lrth
+          ls -lrtha
       - name: "Run linters"
         uses: "wearerequired/lint-action@v1"
         with:
