--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,9 +82,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: "Run linters"
-        uses: "wearerequired/lint-action@v1"
-        with:
-          black: true
-          flake8: true
+      - name: "Lint Code Base"
+        uses: "github/super-linter@slim-v4"
+      # - name: "Run linters"
+      #   uses: "wearerequired/lint-action@v1"
+      #   with:
+      #     black: true
+      #     flake8: true
