fetch depth for linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,8 @@ jobs:
     steps:
       - name: "Checkout Code"
         uses: "actions/checkout@v2"
+        with:
+          fetch-depth: 0
 
       - name: "Install Python 3"
         uses: "actions/setup-python@v2"
