--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: "Lint Code Base"
-        uses: "github/super-linter@slim-v4"
+        uses: "github/super-linter@v4"
       # - name: "Run linters"
       #   uses: "wearerequired/lint-action@v1"
       #   with:
