--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - "merge-updates"
+  pull_request:
+    branches: 
+      - "main"
+      - "merge-updates"
 
 jobs:
   test:
@@ -84,10 +88,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: "Lint Code Base"
-        uses: "github/super-linter@v4"
-      # - name: "Run linters"
-      #   uses: "wearerequired/lint-action@v1"
-      #   with:
-      #     black: true
-      #     flake8: true
+
+      - name: "Run linters"
+        uses: "wearerequired/lint-action@v1"
+        with:
+          black: true
+          flake8: true
