--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: "Run Unit Tests"
 on:
   push:
     branches:
-      - "merge-updates"
+      - "develop"
   pull_request:
     branches: 
-      - "merge-updates"
+      - "develop"
 
 jobs:
   test:
@@ -72,6 +72,7 @@ jobs:
 
       - name: "Build Wheel"
         run: "python setup.py bdist_wheel"
+
       - name: "Save wheel"
         uses: "actions/upload-artifact@v2"
         with:
@@ -90,15 +91,15 @@ jobs:
       - name: "Install Python 3"
         uses: "actions/setup-python@v2"
 
-      - uses: "syphar/restore-virtualenv@v1"
-        id: "cache-virtualenv"
+      # - uses: "syphar/restore-virtualenv@v1"
+      #   id: "cache-virtualenv"
 
 
-      - name: "Setup Virtual Environment"
-        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      # - name: "Setup Virtual Environment"
+      #   if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r requirements.txt
 
       - name: "Run linters"
         uses: "wearerequired/lint-action@v1"
