--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,11 @@ jobs:
           name: "Wheel"
           path: "dist/bfrt_helper-0.0.1-py3-none-any.whl"
         
+      - name: "Temporary: Make Release"
+        uses: "ncipollo/release-action@v1"
+        with:
+          artifacts: "dist/*"
+          token: ${{ secrets.GITHUB_TOKEN }}
 
   lint:
     runs-on: "ubuntu-latest"
