--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,5 +110,6 @@ jobs:
       - name: "Run linters"
         uses: "wearerequired/lint-action@v1"
         with:
-          black: true
+          black: false
           flake8: true
+          flake8_args: "--max-line-length=100"
