Specify pyparsing version Packaging 21.2 has dependency on pyparsing<3,>=2.0.2, but specifying non-versioned package in requirements installs 3.0.5.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ protobuf
 py
 pycodestyle
 pyflakes
-pyparsing
+pyparsing<3,>=2.0.2 # Specific version for packaging
 pytest
 pytest-cov
 pytest-github-actions-annotate-failures
